@@ -40,6 +40,9 @@ Major changes since man-db 2.5.2:
 	o Manual pages may now be compressed with LZMA (although this is
 	  probably only worth it for very large pages).
 
+	o Duplicate manual page hierarchies due to symlinks (e.g. /usr/man
+	  -> /usr/share/man) are detected and removed from the search order.
+
 man-db 2.5.2 (5 May 2008)
 =========================
 
